
<resources>

    <string name="app_name">WeightlossXL</string>
    <string name="back">back</string>
    <string name="action_settings">Settings</string>
    <string name="oven">oven-baked fish and chips</string>
    <string name="weight">Weight Tracker</string>
    <string name="alarm">alarm</string>
    <string name="image">Image</string>
    <string name="title_activity_diet">Diet</string>
    <string name="diet">Diet tips</string>
    <string name="diet_text">Here we are going to give you great and tasty food that is also healthy.</string>
    <string name="summer">Summer pea pasta</string>
    <string name="low">Low-fat rosties</string>
    <string name="soup">Carrot, lentil &amp; orange soup</string>
    <string name="bake">Leak, potato &amp; bacon bake</string>
    <string name="meatball">Lamb meatballs &amp; pea pilaf</string>
    <string name="cake">Light &amp; fluffy chocolate mocha cake </string>
    <string name="title_activity_fish_and_chips">FishAndChips</string>
    <string name="title_activity_fish">MainActivity</string>
    <string name="ovenB">Oven-Baked Fish and Chips</string>
    <string name="hello_world">Hello world!</string>
    <string name="health">Health Tips</string>
    <string name="healthT">Here you will be giving you general heatlh tips to help you lose weight and have healthy life style</string>
    <string name="tips">Tips</string>
    <string name="tipt1">Drink</string>
    <string name="tip1">Drink plenty of calorie-free drinks (water, tea, coffee, diet soda). You may be thirsty, not hungry.</string>
    <string name="tipt2">Fiber</string>
    <string name="tip2">Get plenty of fiber. Vegetables, fruits, and whole grains are good sources. Have a highfiber cereal every day.</string>
    <string name="tipt3">Limit</string>
    <string name="tip3">Limit the amount of alcohol (beer, wine, and liquor) that you drink.</string>
    <string name="tipt4">Meals</string>
    <string name="tip4">Eat at least three times per day. </string>
    <string name="tipt5">Late night snacks</string>
    <string name="tip5">Don\'t have any late night snack before going to bed.</string>
    <string name="tipt6">Sleep</string>
    <string name="tip6">Have the right amount of sleep. You should have at least 8 hours sleep a night. </string>
    <string name="tipt7">Slow and steady wins the race.</string>
    <string name="tip7"> Aim to lose one or two kg a week to keep a steady and healthy weight loss</string>
    <string name="tipt8">Go out for Treats.</string>
    <string name="tip8">If you like to indulge in snack try to have no snack in your house, and when you want to treat yourself walk to the shops.</string>
    <string name="tipt9">Go for walks.</string>
    <string name="tip9">When weather is nice go for a walk walking is the easiest way to lose weight and it easy to do and you don\'t need any equipmant </string>
    <string name="tipt10">Size Matters.</string>
    <string name="tip10">Use smaller plates as a small portion on a big plate will leave you feeling hungry a normal size plate will make you feel you eaten more</string>
    <string name="suggestion">Way to go</string>
    <string name="suggestion1">Your doing great keep up the good work.</string>
    <string name="suggestion2">Great work this week, keep pushing yourself.</string>
    <string name="suggestion3">You getting closer to you goal everyday you doing a fantastic job.</string>
    <string name="suggest">Congratulation</string>
    <string name="suggest1">You\'ve done such a good job you should treat yourself with a relaxing bath.</string>
    <string name="suggest2">Great job treat yourself to a relaxing night in on the couch</string>
    <string name="suggest3">You did a lot this week have a night out with friends to celabrate.</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="email">Example@email.com</string>
    <string name="password"></string>
    <string name="emaillabel">E-Mail</string>
    <string name="passwordlabel">Password</string>
    <string name="loginbutton">Login</string>
    <string name="registerlabel">New To WLXL? Register Here!</string>
    <string name="registerbutton">Register New Account</string>
    <string  name="rpassword" ></string>
    <string  name="remail"></string>
    <string name="label20" >Already Have an Account? Login Here!</string>
    <string name="rfullnamelabel" >Full Name</string>
    <string  name="rfullname" />
    <string name="title_activity_home">HomeActivity</string>
    <string name="dietbutton">Diet</string>
    <string name="generalbutton">General</string>
    <string name="exercisebutton">Exercise</string>
    <string name="bonusbutton">Bonus</string>
    <string name="desc">desc</string>
    <string name="user_name"></string>
    <string name="title_activity_error_page">ErrorPage</string>
    <string name="error">Error! Invalid Username or Password</string>
    <string name="login">Login!</string>
    <string name="title_activity_acheivements">Achievements</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="ctimer" />
    <string name="startbutton">Start</string>
    <string name="pausebutton">Pause</string>
    <string name="chrono"></string>
    <string name="resetbutton">Reset</string>
    <string name="agelabel">Age</string>
    <string name="agetext"></string>
    <string name="heightlabel">Height in feet</string>
    <string name="heighttext" />
    <string name="weightlabel">Weight in kg</string>
    <string name="weighttext" />
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_exercise">Exercise</string>
    <string name="exercise">Exercise</string>
    <string name="ex_workout_routines">Workout routines</string>
    <string name="ex_workoutsexplained">Workouts explained</string>
    <string name="ex_createaworkout">Create a workout</string>
    <string name="title_activity_weight_tracker">WeightTracker</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_workout_routines">WorkoutRoutines</string>
    <string name="upper_body">Upper Body</string>
    <string name="core_workouts">Core</string>
    <string name="lower_body">Lower body</string>
    <string name="light_workouts">Light Workouts</string>
    <string name="moderate_workouts">Moderate Workouts</string>
    <string name="heavy_workouts">Heavy Workouts</string>
    <string name="enable">Enable Alarm</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="alert">Alert</string>
    <string name="label">Label</string>
    <string name="bmi">Body Mass Index</string>
    <string name="calculate">Calculate</string>
    
    
  

</resources>