<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/green" >
    
     <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipt7"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red"
        android:textSize="@dimen/heading"
        android:textStyle="bold"
        android:gravity="center" />
     
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:text="@string/tip7"
         android:textSize="@dimen/text" />
     
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/slow"
        android:contentDescription="@string/image"/>
    
    <Button
        android:id="@+id/back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:text="@string/back" />

</LinearLayout>