<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/green" >
    
<TextView
    	android:id="@+id/textViewLower"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" 
        android:text="@string/lower_body"
        android:textSize="30sp"
        android:textStyle="bold"
        />
<Button
        android:id="@+id/button14"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:text="@string/light_workouts"
        android:textSize="30sp"
        android:textStyle="bold" />
<Button
        android:id="@+id/button15"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:text="@string/moderate_workouts"
        android:textSize="30sp"
        android:textStyle="bold" />
<Button
        android:id="@+id/button16"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:text="@string/heavy_workouts"
        android:textSize="30sp"
        android:textStyle="bold" />
</LinearLayout>