<!--Author: Mark Lee x11435992-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/ex_workout_routines"
        android:textSize="30sp"
        android:textStyle="bold"
         />
    <Button
        android:id="@+id/button5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="@string/upper_body"
        android:textSize="30sp"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/button6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/core_workouts"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button6"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:text="@string/lower_body"
        android:textSize="30sp"
        android:textStyle="bold" />

    
    
</RelativeLayout>
