<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ovenB"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textSize="@dimen/heading"
        android:textStyle="bold" />
      
     
     <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
       	android:layout_below="@+id/textView1"
        android:src="@drawable/oven"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image" />

        
 		<ExpandableListView
             android:id="@+id/expandableListView1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_below="@+id/imageView1"/>
            
        
     
         <Button
        android:id="@+id/back3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/expandableListView1"
        android:textColor="@color/white"
        android:background="@color/black"
        android:text="@string/back" />
    
         
         
    
</RelativeLayout>